compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__echo__echo_in_a_pipeline_with_message.snap
---
source: compiler-core/src/javascript/tests/echo.rs
expression: "\npub fn main() {\n  [1, 2, 3]\n  |> echo as \"message!!\"\n  |> wibble\n}\n\npub fn wibble(n) { n }\n"
---
----- SOURCE CODE

pub fn main() {
  [1, 2, 3]
  |> echo as "message!!"
  |> wibble
}

pub fn wibble(n) { n }


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  Empty as $Empty,
  List$Empty$const as $List$Empty$const,
  NonEmpty as $NonEmpty,
  prepend as listPrepend,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

export function wibble(n) {
  return n;
}

export function main() {
  let _pipe = listPrepend(1, listPrepend(2, listPrepend(3, $List$Empty$const)));
  echo(_pipe, "message!!", "src/module.gleam", 4);
  return wibble(_pipe);
}

// ...omitted code from `templates/echo.mjs`...
