compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__echo__module_named_inspect.snap
---
source: compiler-core/src/javascript/tests/echo.rs
expression: "\nimport other/inspect\n\npub fn main() {\n  echo inspect.x\n}\n"
---
----- SOURCE CODE

import other/inspect

pub fn main() {
  echo inspect.x
}


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/dict.mjs";
import * as $inspect from "../../other/other/inspect.mjs";
import {
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

export function main() {
  return echo($inspect.x, "src/module.gleam", 5);
}

// ...omitted code from `templates/echo.mjs`...
